--- a/sass/style.scss
+++ b/sass/style.scss
@@ -267,9 +267,6 @@ body {
 }
 
 @media (max-width: 488px) {
-  body {
-    overflow-x: hidden;
-  }
   .nav {
     .nav-list {
       display: none;
